--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Angular TP2</title>
-</head>
-<body>
-  <h1>Hello</h1>
-</body>
-</html>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
