--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <ul>
-    <li><a routerLink="/home">Accueil</a></li>
-    <li><a routerLink="/liste">Liste</a></li>
-    <li><a routerLink="/gestion">Gestion</a></li>
-  </ul>
+
+    <a routerLink="/home">Accueil</a>
+    <a routerLink="/liste">Liste</a>
+    <a routerLink="/gestion">Gestion</a>
+
 </nav>
