--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,10 @@
 #btn{
-  float: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-decoration: none;
+  color:black;
+  border:1px solid black;
+  border-radius: 5px;
+  margin: 0vh 1vw 1vh 0vw;
 }
