ajout de style sur le site

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="text-center">
-  <img class="img" src="assets/spiderMan.jpg">
+  <img class="img" ngSrc="assets/spiderverse.jpg" alt="" height="732" width="1056">
 </div>
