--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
-<nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <a routerLink="/home">Accueil</a>
-    <a routerLink="/liste">Liste</a>
-    <a routerLink="/gestion">Gestion</a>
-
+    <a class="nav-link" routerLink="/home"><fa-icon class="icones" [icon]="faHome"></fa-icon>Accueil</a>
+  <a class="nav-link" routerLink="/liste"><fa-icon class="icones" [icon]="faList"></fa-icon>Liste</a>
+    <a class="nav-link" routerLink="/gestion"><fa-icon class="icones" [icon]="faSitemap"></fa-icon>Gestion</a>
+  <a clas="nav-link" href="https://github.com/Mohand-Arezki-BRANECI/Exo2-Arezki-Chadi" target="_blank" id="nameTp"><fa-icon class="icones" [icon]="faShieldCat"></fa-icon>Exo2-Arezki-Chadi</a>
 </nav>
+
+
+
