--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,8 +3,17 @@
   bottom: 0;
   right: 0;
   text-decoration: none;
-  color:black;
+  color:white;
+  background-color: black;
   border:1px solid black;
   border-radius: 5px;
   margin: 0vh 1vw 1vh 0vw;
+  padding:1px 5px 1px 5px;
+}
+
+#btn:hover{
+  background-color: white;
+  color:black;
+  transform: scale(1.2);
+  transition: 0.3s;
 }
