--- a/src/app/liste/liste.component.scss
+++ b/src/app/liste/liste.component.scss
@@ -1,7 +1,41 @@
-.movieTitle{
+.list-group-item{
   cursor: pointer;
 }
 
-.imageFilm{
-  max-height: 60vh;
+.list-group-item:hover{
+  background-color: aqua;
 }
+
+.list-group{
+  max-width: 30%;
+  text-align: center;
+  margin-left: 35%;
+  margin-top: 1% ;
+}
+
+*{
+  font-family: "Roboto Light";
+
+}
+
+#filmList{
+  margin-top: 5vh !important;
+  margin-left: 44%;
+  font-size: 25px;
+}
+
+
+.imageFilm{
+  max-height: 50vh;
+}
+
+
+#movieElement{
+  text-align: center;
+  font-family: 'MyFont';
+}
+
+.Harry Potter{
+  background-color: red;
+}
+
