--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,3 +1,34 @@
-nav{
+.navbar{
   height: 50px;
+  background-color: black !important;
+  padding-top: 1%;
 }
+
+.nav-link{
+  color:white;
+  margin-left: 5%;
+  height: 100%;
+}
+.navbar a:hover,
+.navbar a:hover .icones{
+transform: scale(1.25);
+  transition: 0.5s;
+  color: crimson !important;
+}
+
+#nameTp{
+  color: white;
+  position: absolute;
+  right: 0;
+  margin-right: 5vw;
+  height: 100%;
+margin-top: 1%;
+  text-decoration: none;
+}
+
+.icones{
+  color:white;
+  margin-right: 0.5vw;
+}
+
+
