--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,5 @@
 
 @font-face {
   font-family: 'MyFont';
-  src: url('C:/Users/chadi/Documents/étude/Sorbone/M1 MIAGE/Angular/google fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf');
+  src: url('fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf');
 }
