--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="text-center">
-  <img class="img" ngSrc="assets/spiderverse.jpg" alt="" height="732" width="1056">
+  <img [ngClass]="randomClass" (click)="animation()" class="img" ngSrc="assets/spiderverse.jpg" alt="" height="732" width="1056">
 </div>
