--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,8 @@
 .img{
-  width: 600px;
-  height: 500px;
-  margin-top: 6%;
-
+  width: 500px;
+  height: 400px;
+  margin-top: 8%;
+  cursor: pointer;
 }
 
 
