--- a/src/app/liste/liste.component.scss
+++ b/src/app/liste/liste.component.scss
@@ -22,6 +22,7 @@
   margin-top: 5vh !important;
   margin-left: 44%;
   font-size: 25px;
+  font-weight: bold;
 }
 
 
@@ -35,7 +36,4 @@
   font-family: 'MyFont';
 }
 
-.Harry Potter{
-  background-color: red;
-}
 
