--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,6 @@
+
+
+
 <form class="example-form align-items-center justify-content-center" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <mat-form-field class="example-full-width">
     <mat-label>First Name</mat-label>
@@ -39,12 +42,12 @@
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <mat-label>Last Name</mat-label>
+    <mat-label>Comment</mat-label>
     <textarea matInput placeholder="Ex. Hello!" formControlName="comment"></textarea>
     <mat-error *ngIf="commentControl?.hasError('required')">
       This field is <strong>required</strong>
     </mat-error>
   </mat-form-field>
 
-  <button type="submit" [disabled]="!isFormValid">Submit</button>
+  <button id="submitBtn" type="submit" [disabled]="!isFormValid">Submit</button>
 </form>
