--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,3 +5,12 @@
   margin: 0; /* Remove default margin */
 }
 
+.example-full-width{
+  width : 40%;
+}
+
+#submitBtn{
+  width : 15%;
+  height:5%;
+  border-radius:6px;
+}
