--- a/src/app/liste/liste.component.html
+++ b/src/app/liste/liste.component.html
@@ -1,11 +1,11 @@
-<span id="filmList">Liste des Films</span>
+<div id="filmList">Liste des Films</div>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let film of listFilms" (click)="afficherFilm(film)">
-    {{ film.titre }}
+    {{ film.title }}
   </li>
 </ul>
 
 <div *ngIf="filmSelectionne" id="movieElement">
-  <h3>{{ filmSelectionne.titre }}</h3>
+  <h3>{{ filmSelectionne.title }}</h3>
   <img class="imageFilm" [src]='filmSelectionne.link'>
 </div>
