reglages nom variable fonction et visibilité

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 
-
+<div class="pageTitle">Contacts</div>
 
 <form class="example-form align-items-center justify-content-center" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <mat-form-field class="example-full-width">
