--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   src: url('fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf');
 }
 
+
+.pageTitle{
+  margin-top: 2vh !important;
+  margin-left: 44%;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Roboto Light";
+
+}
+
+
