--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   src: url('fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf');
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
